<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/Main_text"
        android:text="@string/title_main"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/new_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:layout_marginBottom="35dp"
            android:textColor="@color/White"
            android:background="@drawable/btn_main"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/new_list"
            android:textSize="30sp" />

        <Button
            android:id="@+id/existing_list_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:background="@drawable/btn_main"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/White"
            android:text="@string/existing_list"
            android:textSize="30sp" />

    </LinearLayout>
</RelativeLayout>